Fixed overflow issue

--- a/less/hsplitter.less
+++ b/less/hsplitter.less
@@ -9,6 +9,8 @@
 .highed-hsplitter .panel {
 	display: inline-block;
 	
+	overflow-x: hidden;
+	white-space: normal;
 	overflow-y: auto;
 	height:100%;
 	background:@background-panel;
